# cwtr

./: .gitignore  config.py  main.py  pyproject.toml  requirements.txt  run_streamlit.py  test_api.py  token.pickle  total_articles.py
api/: main.py
app/: config.py  db_streamlit.py  streamlit_app.py
db/: postgres_connector.py
docs/: database_access.txt
website_scrappers/: bloomberg.py  coindesk.py  cointelegraph.py  cryptonews.py  decrypt.py  emails_scrapper.py  forbes.py  theblock.py
